# performance_optimization_essay

./: README.md
cpu_cache_optimization/: CMakeLists.txt
cpu_cache_optimization/cmake/modules/: FindBenchmark.cmake
cpu_cache_optimization/example1/: test.cc
cpu_cache_optimization/example2/: test.cc
cpu_cache_optimization/example3/: test.cc
cpu_cache_optimization/example4/: parse_image.py  test.cc
cpu_cache_optimization/example5/: test.cc
cpu_cache_optimization/example6/: parse_image.py  test.cc
who_is_faster/: Readme.txt
who_is_faster/sample_01/: sample_01a.cc  sample_01b.cc
who_is_faster/sample_02/: sample_02a.cc  sample_02b.cc
